--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-/*@import url("//fonts.googleapis.com/css?family=Lato:400,700,400italic");*/
-
-/*@font-face {
-	font-family: Bebas_Neue;
-	src: url('../fonts/bebas_neue/BebasNeue.otf');
-}*/
-
 /* ---------- Polyfills ---------- */
 
 body {
@@ -21,7 +14,7 @@ section {
 	overflow: auto;
 }
 
-a {
+a, a:hover, a:active, a:focus {
 	color: #428bca;
 }
 
@@ -55,13 +48,17 @@ a {
 	min-height: 580px;
 }
 
+#about > #about-content {
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	color: white;
+}
+
 #about-content {
 	font-size: 30px;
 	position: relative;
 	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
 	padding-top: 60px;
 	width: 80%;
 	max-width: 650px;
@@ -69,11 +66,10 @@ a {
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
-	color: white;
 }
 
-#about-content div, small {
-	color: #fff !important;
+#about #about-content small {
+	color: white !important;
 }
 
 @media (max-width:480px) {
