--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,16 @@ a, a:hover, a:active, a:focus {
 	float: left;
 }
 
+.navbar-toggle {
+	float: left;
+}
+
+@media (min-width: 768px) {
+	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+		margin-left: 15px;
+	}
+}
+
 /* ---------- About ---------- */
 
 #about {
@@ -332,7 +342,6 @@ footer > div {
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
-	font-size: 1.5em;
 }
 
 .social {
