--- a/css/component.css
+++ b/css/component.css
@@ -12,26 +12,28 @@ html, body { height: 100%; }
 .pt-page {
 	width: 100%;
 	/*height: 100%;*/
-	position: absolute;
+	/*position: absolute;*/
 	top: 0;
 	left: 0;
 	visibility: hidden;
-	overflow: hidden;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-webkit-transform: translate3d(0, 0, 0);
-	-moz-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-	-webkit-transform-style: preserve-3d;
-	-moz-transform-style: preserve-3d;
-	transform-style: preserve-3d;
+	/*overflow: hidden;*/
+	/*-webkit-backface-visibility: hidden;*/
+	/*-moz-backface-visibility: hidden;*/
+	/*backface-visibility: hidden;*/
+	/*-webkit-transform: translate3d(0, 0, 0);*/
+	/*-moz-transform: translate3d(0, 0, 0);*/
+	/*transform: translate3d(0, 0, 0);*/
+	/*-webkit-transform-style: preserve-3d;*/
+	/*-moz-transform-style: preserve-3d;*/
+	/*transform-style: preserve-3d;*/
+	display: none;
 }
 
 .pt-page-current,
 .no-js .pt-page {
-	visibility: visible;
+	visibility: visible !important;
 	z-index: 1;
+	display: inherit !important;
 }
 
 .no-js body {
