Check if friends are null
Zapier integration to prevent frequent errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,10 @@ footer {
     font-weight: normal;
 }
 
+.panel-group {
+	margin-bottom: 0;
+}
+
 /* ---------- Sponsors ---------- */
 
 .sponsor_logo {
