--- a/css/styles.css
+++ b/css/styles.css
@@ -325,19 +325,25 @@ footer {
 
 #schedule h2 {
 	font-weight: 300;
-	font-size: 4em;
+	font-size: 3em;
 	text-align: center;
 	padding-bottom: 20px;
 }
 
 table, th, td {
-	border: none;
+	border: 1px solid black!important;
 	border-collapse: collapse;
 	margin: 0;
 	table-layout: fixed;
 	width: 100%;
 	font-size: 1.2em;
 	word-wrap: break-word;
+}
+
+@media (max-width:480px) {
+	table, th, td {
+		font-size: 1em;
+	}
 }
 
 th, td {
@@ -411,10 +417,11 @@ th.event {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 200px;
-	width: 43%;
+	width: 90%;
 }
 
 #gunn-cs-img {
+	width: 90%;
 	max-width: 100px;
 	display: block;
 	margin: 0 auto;
@@ -422,7 +429,8 @@ th.event {
 }
 
 #a16z-img {
-	max-width: 175px;
+	width: 90%;
+	max-width: 200px;
 	display: block;
 	margin: 0 auto;
 	text-align: center;
